--- a/lib.tsconfig.json
+++ b/lib.tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "dist/",
     "importHelpers": false,
     "declaration": true,
+    "allowJs": true,
     "declarationMap": true,
     "declarationDir": "dist/types",
     "typeRoots": ["./typechain/*.d.ts", "./node_modules/@types"]
