--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "url": "git://github.com/aave/aave-v3-deploy"
   },
   "dependencies": {
-    "@openzeppelin/defender-relay-client": "^1.54.1"
+    "@openzeppelin/defender-relay-client": "^1.54.1",
+    "@polkadot/api": "^15.0.2"
   }
 }
